Finishing final scene of investing game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
 	  <script src="js/phaser.js"></script>
+	  <script src="js/resultScene.js"></script>
+	  <script src="js/mainScene.js"></script>
 	  <script src="js/game.js"></script>
   </body>
 </html>
